Agregamos algunas cosas a la hoja de estilo de stylus, ademas agregamos normalize de stylus

--- a/stylus/estilos.styl
+++ b/stylus/estilos.styl
@@ -1,1 +1,11 @@
 @import "normalize.styl"
+
+body
+	font-size 16px
+.container
+	padding 1.4em
+	
+.song
+	width 8rem
+	display inline-block
+	font-size 1rem
