Agregamos mas informacion a la pagina sfotipy

--- a/stylus/estilos.styl
+++ b/stylus/estilos.styl
@@ -1,21 +1,91 @@
 @import "normalize.styl"
+@import "fonts.styl"
 
 gris_oscuro = #333333
 gris_claro = #818181
-
+rojo = #BD255B
+a 
+	text-decoration none
 body
 	font-family 'Roboto', sans-serif;
 	font-size 16px
 figure 
 	margin 0
+img
+	vertical-align top 
+.button-menu
+	color gris_oscuro
+	left .5em
+	margin-top -10px
+	position absolute
+	top 50%
 .container
-	padding 1.4em
+	padding 1.4rem
 	font-size 0
 	text-align center
+.action 
+	color white
+	font-size 1.2em
+	margin-right 0.5em
+	&:last-child
+		margin 0
+.actions
+	position absolute
+	bottom 0
+	left 0
+	right 0
+	background rgba(black, .3)
+.boder-bottom
+	border-bottom 1px solid gris_claro
 .name
 	color gris_oscuro
+.menu
+	display none
+.relative
+	position relative
 .author
 	color gris_claro
+.center-block
+	margin 0 auto
+.center-text
+	text-align center
+.padding
+	padding 1em
+.progress
+	margin 1em 0em
+	.min
+	.max
+		font-size .8em
+	.min
+	.total
+		background gris_claro
+		border-radius 5px
+		height 5px
+		margin 0 auto
+		width 75%
+	.state
+		height 5px
+		background rojo
+		width 30%
+		border-radius 5px
+		position relative
+	.circle
+		width 10px
+		height 10px
+		background gris_oscuro
+		border-radius 50%
+		position absolute
+		right 0
+		top -2px
+.right-text
+	text-align right
+.header
+	height 3.5em
+	.title
+		font-size 1.1em
+		text-align center
+		margin 0
+		line-height 3.5em
 .song
 	width 8rem
 	display inline-block
@@ -27,3 +97,6 @@ figure
 		margin-right 0
 	p
 		margin .5em 0
+.playing
+	&.small
+		width 20em
